Update Manifest.json version and integration type
Updated version number and changed integration type from 'service' to 'device'.

--- a/Manifest.json
+++ b/Manifest.json
@@ -1,12 +1,12 @@
 {
- "domain": "notifheure",
- "name": "Notifheure",
- "documentation": "https://github.com/ton-github/notifheure",
- "issue_tracker": "https://github.com/ton-github/notifheure/issues",
- "version": "1.0.0",
- "dependencies": ["mqtt"],
- "codeowners": ["@ton-github"],
- "requirements": [],
- "iot_class": "local_push",
- "integration_type": "service"
+  "domain": "notifheure",
+  "name": "Notifheure",
+  "documentation": "https://github.com/ton-github/notifheure",
+  "issue_tracker": "https://github.com/ton-github/notifheure/issues",
+  "version": "1.0.1",
+  "dependencies": ["mqtt"],
+  "codeowners": ["@ton-github"],
+  "requirements": [],
+  "iot_class": "local_push",
+  "integration_type": "device"
 }
